# conan_config

./: .gitignore  README.md  conan.conf  remotes.txt
profiles/: c_unittest  clang  clang_ninja  cxx_codecoverage  cxx_unittest  gcc  linux_x86_64_x86_64_clang7_debug  linux_x86_64_x86_64_clang7_release  linux_x86_64_x86_64_clang8_debug  linux_x86_64_x86_64_clang8_release  linux_x86_64_x86_64_clang9_debug  linux_x86_64_x86_64_clang9_release  linux_x86_64_x86_64_gcc7_debug  linux_x86_64_x86_64_gcc7_release  linux_x86_64_x86_64_gcc8_debug  linux_x86_64_x86_64_gcc8_release  linux_x86_64_x86_64_gcc9_debug  linux_x86_64_x86_64_gcc9_release  macos_x86_64_x86_64_apple-clang11_Debug  msvc  ros_container  windows_clang  windows_x86_64_x86_64_msvc16_Debug  windows_x86_64_x86_64_msvc16_Release
templates/c/lib/: CMakeLists.txt
templates/c/lib/include/: {{ cookiecutter.project_name.hpp
templates/c/lib/src/: {{ cookiecutter.project_name }}.cpp
templates/cpp/: cookiecutter.json
templates/cpp/{{ cookiecutter.project_name }}/: .clang-format  .gitignore  Dockerfile  README.md  azure-pipelines.yaml  conanfile.py  entrypoint.sh  sonar-project.properties
templates/cpp/{{ cookiecutter.project_name }}/test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
templates/cpp/{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/: CMakeLists.txt
templates/cpp/{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/app/: CMakeLists.txt
templates/cpp/{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/app/src/: main.cpp
templates/cpp/{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/cmake/: config_helper.cmake  {{ cookiecutter.project_name }}Config.cmake.in
templates/cpp/{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/lib/include/: {{ cookiecutter.project_name }}.hpp
templates/cpp/{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/lib/src/: {{ cookiecutter.project_name }}.cpp
templates/cpp/{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/test/: CMakeLists.txt
templates/cpp/{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/test/src/: test_{{ cookiecutter.project_name }}.cpp
